turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:77: error: Unmatched closing brace '}' ignored here
    }
    ^